# dos

./: .gitignore  CHANGELOG.md  GITHUB.md  IDEAS.md  ORIGIN.md  README.md  pyproject.toml  requirements.txt
docs/: product-map.md
scripts/: dump_help_to_folio.py
src/digital_office_spaces/: __init__.py  book_ui.py  cli.py  commands.py  dialog.py  format.py  help_cli.py  history.py  multiline_open.py  seed.py  status.py  studio_text.py  text_editor.py  textutil.py
src/dos/: __init__.py  argflags.py  book.py  book_ui.py  cli.py  commands.py  db.py  format.py  help_cli.py  help_topics.py  help_ui.py  ids.py  mapview.py  measure.py  schema.sql  seed.py  story_when.py  tdf.py  text_editor.py  undo.py  ven_pack.py  wiki.py  wiki_ui.py  world.py
tests/: conftest.py  test_argflags.py  test_book.py  test_clear_log.py  test_containers.py  test_creator_shorthand.py  test_desc.py  test_desc_live_undo.py  test_despawn.py  test_display.py  test_help_cli.py  test_help_ui.py  test_history.py  test_inner_goals.py  test_instance_desc_lore.py  test_instances.py  test_layer_lore.py  test_link_edit.py  test_look_buckets.py  test_lore_stamp.py  test_manual.py  test_map.py  test_measure.py  test_naming.py  test_nested_bin_names.py  test_office_codes.py  test_presentation.py  test_print_ticket.py  test_put_adjacent.py  test_run_portal.py  test_seed_bootstrap.py  test_seed_empty.py  test_seed_office.py  test_seed_story.py  test_seed_tavern.py  test_seed_void.py  test_spawn_place.py  test_status.py  test_studio_text.py  test_talk.py  (+10 more)
